src/objects/Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Action_Name__c</fullName>
        <label>Action Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <description>this field stores Class/Trigger Name</description>
        <label>Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <label>Exception Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_type__c</fullName>
        <label>Exception type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Error Log</label><nameField>
        <displayFormat>El-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Error Logs</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action_Name__c</columns>
        <columns>Entity_Name__c</columns>
        <columns>Exception_Message__c</columns>
        <columns>Exception_type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>